使用 Colaboratory 建立

--- a/Pressure_analyse.ipynb
+++ b/Pressure_analyse.ipynb
@@ -11,6 +11,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Sprint 2 Machine Learning**\n",
+        "**The design of the floor detection system consists of three main components: data collection and dataset creation, deep learning model training, and floor detection using the trained deep learning model. Figure 3 provides an overview of the Deep Learning Convolutional Neural Network (DL-CNN) floor detection process design, illustrating the main components and their interactions.**\n",
+        "\n",
+        "\n",
+        "**Data Collection and Dataset:** The system collects barometer readings from a smartphone and stores the data in a database. This dataset includes features such as seconds elapsed, relative altitude, and atmospheric pressure, which serve as input to the deep learning model training process.\n",
+        "\n",
+        "**Deep Learning Model Training:** In this phase, the collected data undergoes preprocessing and human labeling to ensure accuracy. The data is then used to train a deep learning model, specifically a 1D Convolutional Neural Network (CNN), which is designed to handle time-series sensor data effectively. The model is trained on the preprocessed and labeled data, with the goal of learning to predict the correct floor number based on the input features.\n",
+        "\n",
+        "**Floor Detection with the Trained Deep Learning Model:** Once the CNN model is trained, it can be used to detect the floor number in real-time. The system inputs time-series barometer data from the smartphone into the trained model, which then outputs the detected floor number. This allows users to identify their current floor in a building based on the sensor data."
+      ],
+      "metadata": {
+        "id": "fVDwLVMF4j21"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -25,6 +42,16 @@
         "import seaborn as sns\n",
         "tf.random.set_seed(42)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Data Collection**\n",
+        "Using the \"Sensor Logger\" application, sensor data, including seconds elapsed, relative altitude, and atmospheric pressure, were collected from a smartphone. To ensure dataset accuracy, a manual labeling process was carried out to assign the correct floor numbers to the collected data.\n"
+      ],
+      "metadata": {
+        "id": "pfSgd6hG5XnB"
+      }
     },
     {
       "cell_type": "code",
@@ -356,6 +383,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Data Preprocessing**\n",
+        "Data preprocessing involved importing data with the pandas library, removing missing values (NA), and visualizing the relationship between features and the target variable (floor number).\n",
+        "# **Feature Engineering**\n",
+        "Custom functions 'transformFloor()' and 'nomoralizePressure()' were developed for data transformation and normalization. Floor numbers were converted from strings to integers, and atmospheric pressure was normalized."
+      ],
+      "metadata": {
+        "id": "INLkoKQD6S4R"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -630,6 +669,16 @@
         "print(x_train.shape)\n",
         "print(y_train.shape)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Model Definition and Training**\n",
+        "A 1D Convolutional Neural Network (CNN) was employed for floor detection. The custom 'SimpleNet' class defined the model architecture, and the model was trained using the Adam optimizer, sparse categorical crossentropy loss, and accuracy metric. High training accuracy was achieved."
+      ],
+      "metadata": {
+        "id": "8ttiW6xO6lgc"
+      }
     },
     {
       "cell_type": "code",
@@ -994,6 +1043,16 @@
         "net.compile(optimizer='adam',loss='sparse_categorical_crossentropy', metrics='accuracy')\n",
         "net.fit(x_train, y_train, batch_size=32,epochs=150)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Model Evaluation**\n",
+        "The trained model was tested on a separate dataset, with preprocessing and feature engineering steps applied consistently. The model's performance, assessed in terms of loss and accuracy, demonstrated its effectiveness in real-world scenarios."
+      ],
+      "metadata": {
+        "id": "GkdaJp_a6vzf"
+      }
     },
     {
       "cell_type": "code",
@@ -1522,15 +1581,6 @@
       "source": [
         "net.evaluate(x_test, y_test, batch_size = 64)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "fM4dC_PH5bSn"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
