使用 Colaboratory 建立

--- a/Pressure_analyse.ipynb
+++ b/Pressure_analyse.ipynb
@@ -14,7 +14,7 @@
       "cell_type": "markdown",
       "source": [
         "# **Sprint 2 Machine Learning**\n",
-        "**The design of the floor detection system consists of three main components: data collection and dataset creation, deep learning model training, and floor detection using the trained deep learning model. Figure 3 provides an overview of the Deep Learning Convolutional Neural Network (DL-CNN) floor detection process design, illustrating the main components and their interactions.**\n",
+        "**The design of the floor detection system consists of three main components: data collection and dataset creation, deep learning model training, and floor detection using the trained deep learning model. \n",
         "\n",
         "\n",
         "**Data Collection and Dataset:** The system collects barometer readings from a smartphone and stores the data in a database. This dataset includes features such as seconds elapsed, relative altitude, and atmospheric pressure, which serve as input to the deep learning model training process.\n",
