--- a/Comp3516_group08_Floor_level_localization_using_smartphones.ipynb
+++ b/Comp3516_group08_Floor_level_localization_using_smartphones.ipynb
@@ -254,7 +254,7 @@
       "cell_type": "markdown",
       "source": [
         "# **Sprint 2 Machine Learning**\n",
-        "**The design of the floor detection system consists of three main components: data collection and dataset creation, deep learning model training, and floor detection using the trained deep learning model. Figure 3 provides an overview of the Deep Learning Convolutional Neural Network (DL-CNN) floor detection process design, illustrating the main components and their interactions.**\n",
+        "**The design of the floor detection system consists of three main components: data collection and dataset creation, deep learning model training, and floor detection using the trained deep learning model.**\n",
         "\n",
         "\n",
         "**Data Collection and Dataset:** The system collects barometer readings from a smartphone and stores the data in a database. This dataset includes features such as seconds elapsed, relative altitude, and atmospheric pressure, which serve as input to the deep learning model training process.\n",
@@ -1821,6 +1821,130 @@
       "source": [
         "net.evaluate(x_test, y_test, batch_size = 64)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Sprint 3: Floor Detection Using Particle Filter**\n",
+        "# **//Not Yet Release**\n",
+        "\n",
+        "In this sprint, we will improve the floor detection system by incorporating a particle filter to the deep learning model. The particle filter will help us to better estimate the floor position by considering the uncertainty in the sensor readings and the model's output. \n",
+        "This sprint will consist of three main components: \n",
+        "1. Understanding the particle filter concept \n",
+        "2. Integrating the particle filter with the deep learning model \n",
+        "3. Evaluating the performance of the floor detection system with the particle filter."
+      ],
+      "metadata": {
+        "id": "jP4SAFd3XQkw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import tensorflow as tf"
+      ],
+      "metadata": {
+        "id": "xsz74kIiXZUf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ParticleFilter class definition\n",
+        "class ParticleFilter:\n",
+        "    def __init__(self, num_particles, num_floors, std_dev):\n",
+        "        self.num_particles = num_particles\n",
+        "        self.particles = np.random.randint(0, num_floors, size=num_particles)\n",
+        "        self.weights = np.ones(num_particles) / num_particles\n",
+        "        self.std_dev = std_dev\n",
+        "\n",
+        "    def predict(self):\n",
+        "        pass  # No prediction step in this example as we assume no motion\n",
+        "\n",
+        "    def update(self, sensor_reading, predicted_floors):\n",
+        "        likelihoods = np.exp(-0.5 * ((predicted_floors - sensor_reading) ** 2) / (self.std_dev ** 2))\n",
+        "        self.weights *= likelihoods\n",
+        "        self.weights /= np.sum(self.weights)\n",
+        "\n",
+        "    def resample(self):\n",
+        "        indices = np.random.choice(np.arange(self.num_particles), size=self.num_particles, p=self.weights)\n",
+        "        self.particles = self.particles[indices]\n",
+        "        self.weights.fill(1.0 / self.num_particles)\n",
+        "\n",
+        "    def estimate_floor(self):\n",
+        "        return np.round(np.average(self.particles, weights=self.weights))"
+      ],
+      "metadata": {
+        "id": "5TJrbGZmYJb-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load the test dataset\n",
+        "test_data = pd.read_csv('test_set.csv')\n",
+        "\n",
+        "# Preprocess the test dataset\n",
+        "test_data['Floor'] = test_data['Floor'].apply(transformFloor)\n",
+        "test_data['pressure'] = nomoralizePressure(test_data['pressure'], test_data['pressure'].max(), test_data['pressure'].min())\n",
+        "\n",
+        "x_test = test_data[['seconds_elapsed', 'relativeAltitude', 'pressure']].to_numpy().reshape((-1, 3, 1))\n",
+        "y_test = test_data[['Floor']].to_numpy()\n",
+        "\n",
+        "# Create an instance of ParticleFilter\n",
+        "num_particles = 1000\n",
+        "num_floors = 6\n",
+        "std_dev = 1.0\n",
+        "particle_filter = ParticleFilter(num_particles, num_floors, std_dev)\n",
+        "\n",
+        "# Run the particle filter for each test data point\n",
+        "predictions = []\n",
+        "for sensor_reading in x_test:\n",
+        "    # Predict the floor using the trained neural network model\n",
+        "    predicted_floor_prob = net.predict(sensor_reading.reshape(1, 3, 1))[0]\n",
+        "    predicted_floors = np.arange(num_floors)\n",
+        "\n",
+        "    particle_filter.predict()\n",
+        "    particle_filter.update(predicted_floor_prob, predicted_floors)\n",
+        "    particle_filter.resample()\n",
+        "\n",
+        "    estimated_floor = particle_filter.estimate_floor()\n",
+        "    predictions.append(estimated_floor)"
+      ],
+      "metadata": {
+        "id": "6zXKGbSKYFQR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Model Evaluation with Particle Filter**\n",
+        "The particle filter, combined with the trained deep learning model, was evaluated on a separate test dataset. Preprocessing and feature engineering were consistently applied. The accuracy was calculated by comparing the estimated floor positions from the particle filter with the actual floor positions in the test dataset."
+      ],
+      "metadata": {
+        "id": "erESU6FeYpCD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the accuracy of the particle filter\n",
+        "accuracy = np.sum(predictions == y_test.flatten()) / len(y_test)\n",
+        "print(\"Particle Filter Accuracy: {:.4f}\".format(accuracy))"
+      ],
+      "metadata": {
+        "id": "XGa2nn3LYYaB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
