--- a/signal_processing.ipynb
+++ b/signal_processing.ipynb
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Output the floor level of the user and the respective time\n",
+    "4. Initialize parameters to slope and floor level calculation\n",
     "\n",
     "Several parameters are initialized, including the number of data points to use for slope calculation, the minimum slope required to trigger a floor level change, and the required difference in air pressure that signifies a floor change."
    ]
